Cater for unrevealed toolbars when showing the PageInfoBubble on Mac

Currently, HasVisibleLocationBarForBrowser(..) just looks at the toolbar
visibility preference. Instead, query the toolbar controller to see whether
the toolbar has been revealed or not.

As an added bonus, permission bubbles are now able to re-anchor to the
toolbar/screen edge when revealing/hiding the toolbar in AppKit-
initiated fullscreen.

Bug: 749214
Test: On Mac, Ensure View->"Always show toolbar in fullscreen" is unchecked.
Press Ctrl+Cmd+f to enter fullscreen.
Move the mouse to the top of the screen to reveal the toolbar and
click the 'Page Info' button in the location bar. The dialog should
open below the location bar rather than the top of the screen.

Change-Id: If7c0df7d3dc675f24cf467a2497ebe5c9cca7b8a
Reviewed-on: https://chromium-review.googlesource.com/593382
Reviewed-by: Ben Wells <benwells@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490877}
Former-commit-id: f9cf932a6db81f79876f084b16426c14c0d2ffee